# mycc

./: .clang-format  .gitignore  .gitignore~  .main.c.un~  CMakeLists.txt  README.md  main.c  testing
frontend/: CMakeLists.txt
frontend/include/: err_base.h  token_type.h
frontend/include/ast/: ast_dumper.h  identifier.h  type_name.h
frontend/include/ast/declaration/: declaration_list.h  enum_list.h  enum_spec.h  external_declaration.h  func_def.h  init_declarator_list.h  param_declaration.h  static_assert_declaration.h  struct_declaration.h  struct_declaration_list.h  struct_declarator.h
frontend/include/ast/expr/: add_expr.h  assign_expr.h  cast_expr.h  const_expr.h  constant.h  eq_expr.h  expr.h  log_and_expr.h  log_or_expr.h  primary_expr.h  rel_expr.h  string_constant.h
frontend/include/ast/initializer/: designator_list.h  init_list.h
frontend/include/ast/statement/: block_item.h  iteration_statement.h  jump_statement.h  labeled_statement.h  selection_statement.h
frontend/include/frontend/: ArchTypeInfo.h  ErrBase.h  ExpectedTokensErr.h  FileInfo.h  StrLit.h  Token.h  Value.h  arch_type_info.h  arg_parse.h  err_base.h  expected_tokens_err.h  file_info.h  str_lit.h  token.h  token_kind.h  token_kind.inc  value.h
frontend/include/frontend/ast/: AssignExpr.h  AstNodeInfo.h  Expr.h  GenericSel.h  Identifier.h  Initializer.h  SpecQualList.h  Statement.h  StringLiteralNode.h  TranslationUnit.h  TypeName.h  UnaryExpr.h  ast.h  ast_bin_dumper.h  ast_bin_reader.h  ast_deserializer.h  ast_dumper.h  ast_dumper_2.h  ast_node_info.h  ast_serializer.h  ast_serializer_2.h  compare_asts.h  identifier.h  initializer.h  spec_qual_list.h  statement.h  string_literal.h  string_literal_node.h  translation_unit.h  type_name.h
frontend/include/frontend/parser/: ParserErr.h  ParserState.h  ParserState.inc  parser.h  parser_err.h  parser_state.h  parser_util.h
frontend/include/frontend/preproc/: PreprocErr.h  PreprocMacro.h  PreprocState.h  PreprocTokenArr.h  TokenArr.h  code_source.h  num_parse.h  preproc.h  preproc_const_expr.h  preproc_err.h  preproc_macro.h  preproc_state.h  read_and_tokenize_line.h  regex.h  tokenizer.h
frontend/include/preproc/: preproc.h  preproc_err.h  tokenizer.h
frontend/src/: ArchTypeInfo.c  CMakeLists.txt  ErrBase.c  ExpectedTokensErr.c  FileInfo.c  StrLit.c  Token.c  Value.c  arch_type_info.c  arg_parse.c  err_base.c  expected_tokens_err.c  file_info.c  str_lit.c  token.c  token_kind.c  token_type.c  value.c
frontend/src/ast/: AssignExpr.c  AstNodeInfo.c  CMakeLists.txt  Expr.c  GenericSel.c  Identifier.c  Initializer.c  SpecQualList.c  Statement.c  StringLiteralNode.c  TranslationUnit.c  TypeName.c  UnaryExpr.c  ast.c  ast_bin_dumper.c  ast_bin_reader.c  ast_deserializer.c  ast_dumper.c  ast_dumper_2.c  ast_node_info.c  ast_serializer.c  ast_serializer_2.c  compare_asts.c  identifier.c  initializer.c  spec_qual_list.c  statement.c  string_literal.c  string_literal_node.c  translation_unit.c  type_name.c
frontend/src/ast/declaration/: AbsDeclarator.c  AlignSpec.c  AtomicTypeSpec.c  CMakeLists.txt  Declaration.c  DeclarationList.c  DeclarationSpecs.c  Declarator.c  DirectAbsDeclarator.c  DirectDeclarator.c  EnumSpec.c  ExternalDeclaration.c  FuncDef.c  IdentifierList.c  InitDeclarator.c  InitDeclaratorList.c  ParamTypeList.c  Pointer.c  StaticAssertDeclaration.c  StructUnionSpec.c  TypeQuals.c  TypeSpecs.c  abs_declarator.c  align_spec.c  atomic_type_spec.c  declaration.c  declaration_list.c  declaration_specs.c  declarator.c  direct_abs_declarator.c  direct_declarator.c  enum_list.c  enum_spec.c  enumerator.c  external_declaration.c  func_def.c  identifier_list.c  init_declarator.c  init_declarator_list.c  param_declaration.c  (+11 more)
frontend/src/ast/expr/: AddExpr.c  AndExpr.c  ArgExprList.c  AssignExpr.c  CastExpr.c  CondExpr.c  ConstExpr.c  Constant.c  EqExpr.c  Expr.c  GenericSel.c  LogAndExpr.c  LogOrExpr.c  MulExpr.c  OrExpr.c  PostfixExpr.c  PrimaryExpr.c  RelExpr.c  ShiftExpr.c  (+27 more)
frontend/src/parser/: CMakeLists.txt  ParserErr.c  ParserState.c  parser.c  parser_err.c  parser_state.c  parser_util.c
frontend/src/preproc/: CMakeLists.txt  PreprocErr.c  PreprocMacro.c  PreprocState.c  PreprocTokenArr.c  TokenArr.c  code_source.c  num_parse.c  preproc.c  preproc_const_expr.c  preproc_err.c  preproc_macro.c  preproc_state.c  read_and_tokenize_line.c  read_and_tokenize_line.h  regex.c  regex.h  tokenizer.c  tokenizer.h
frontend/test/: CMakeLists.txt  frontend_test.c  test_helpers.c  test_helpers.h
frontend/test/files/: huge_testfile.c  large_testfile.c  large_testfile.c.ast  large_testfile.c.binast  large_testfile.c.binast_2  no_preproc.c  no_preproc.c.ast  no_preproc.c.ast_2  no_preproc.c.binast  no_preproc.c.binast_2  parser_testfile.c  parser_testfile.c.ast  parser_testfile.c.binast  parser_testfile.c.binast_2  preproc_if.c
frontend/test/parser/: CMakeLists.txt  ParserState_test.c  parser_error_test.c  parser_expr_test.c  parser_file_test.c  parser_misc_test.c  parser_state_test.c  parser_statement_test.c  parser_test.h  parser_test_util.c  parser_test_util.h
frontend/test/preproc/: CMakeLists.txt  file_expected.inc  include_expected.inc  num_parse_test.c  num_parser_test.c  preproc_if_expected.inc  preproc_macro_expansion_test.c  preproc_macro_parser_test.c  preproc_test.h  simple_expected.inc  tokenizer_error_test.c  tokenizer_test.c
testing/: CMakeLists.txt
testing/include/testing/: asserts.h  testing.h
util/: CMakeLists.txt
util/include/util/: File.h  IndexedStringSet.h  Str.h  Str.inc  StrBuf.h  StringMap.h  annotations.h  arch.h  file.h  log.h  macro_util.h  mem.h  paths.h  str.h  string.h  string_hash_map.h  string_map.h  timing.h
util/src/: CMakeLists.txt  File.c  IndexedStringSet.c  Str.c  StrBuf.c  StringMap.c  file.c  hash_string.c  hash_string.h  macro_util.c  mem.c  paths.c  str.c  string.c  string_hash_map.c  string_map.c  timing.c
util/test/: CMakeLists.txt  IndexedStringSet_test.c  StrBuf_test.c  Str_test.c  StringMap_test.c  str_test.c  string_hash_map_test.c  string_map_test.c  string_test.c  util_test.c
(+563 files in other folders)
